# ant-life

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  nodemon.json  package-lock.json  package.json  style.css
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: definitions.js.html  index.html  lib.js.html  world.js.html  worldgen.js.html  worldlogic.js.html
script/: definitions.js  game.js  lib.js  render.js  wasmPlaceholer.js  world.js  worldgen.js  worldlogic.js
src/: definitions.rs  lib.rs  utils.rs  world.rs  worldgen.rs  worldlogic.rs
test/: world.test.js
