[package]
name = "ant-life-optimised"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
syn = "2.0.29"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ['console'] }
serde-wasm-bindgen = "0.3"